Finished moving profile to own storage system